<resources>
    <string name="app_name">match-collection</string>
    <string name="btn_objective_collection_select">Objective Collection</string>
    <string name="btn_subjective_collection_select">Subjective Collection</string>
    <string name="btn_timer_start">Start Match</string>
    <string name="btn_action_intake_other">Intake Other - %1$s</string>
    <string name="btn_action_poach">Poach - %1$s</string>
    <string name="btn_action_failed">Failed - %1$s</string>
    <string name="tb_action_bool_one_off">Start Incap</string>
    <string name="tb_action_bool_one_on">End Incap</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_redo">Redo</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_proceed">Proceed</string>
    <string name="btn_to_teleop">To Teleop</string>
    <string name="btn_to_endgame">To Endgame</string>
    <string name="btn_assignment">Automatic Assignment</string>
    <string name="btn_override">Override</string>
    <string name="tv_team_number_input">Team Number</string>
    <string name="tv_team_number_input_one">Team One</string>
    <string name="tv_team_number_input_two">Team Two</string>
    <string name="tv_team_number_input_three">Team Three</string>
    <string name="tv_match_number_input">Match Number</string>
    <string name="btn_id_default">Scout ID: NONE</string>
    <string name="btn_old_QRs_default">Old QRs</string>
    <string name="btn_scout_id_message">Scout ID: %1$s</string>
    <string name="tv_version_num">Version: %1$s</string>
    <string name="tv_event_name">Event Key: %1$s</string>
    <string name="tv_time_display">%1$s - %2$s</string>
    <string name="final_auto_time">135</string>
    <string name="initial_teleop_time">134</string>
    <string name="final_time">0</string>
    <string name="error_back_reset">Do you want to reset everything?</string>
    <string name="error_missing_information">PLEASE INPUT ALL INFORMATION!</string>
    <string name="warning_same_rankings">Are you sure you want to have duplicate rankings?</string>
    <string name="warning_proceed_override">Are you sure you want to proceed?</string>
    <string name="team_name_missing_integer">PLEASE ENSURE ALL TEAMS CONTAIN INTEGERS</string>
    <string name="error_same_teams">PLEASE ENSURE ALL TEAMS ARE DIFFERENT!</string>
    <string name="error_qr">INVALID QR!</string>
    <string name="error_file_missing">MATCH SCHEDULE FILE MISSING!</string>
    <string name="error_id_missing">SCOUT ID MISSING!</string>
    <string name="btn_switch_orientation">Switch Orientation</string>
    <string name="climb_timer">Time: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="timer_run_down">Teleop - 0</string>
    <string name="preloaded_true">No Preload</string>
    <string name="preloaded_false">Has Preload</string>
    <string name="btn_playoffs">Playoffs</string>
    <string name="Defense">Defense</string>
    <string name="btn_no_show">No Show</string>
</resources>
