<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="@dimen/small">

    <TextView
        android:id="@+id/tv_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:layout_gravity="center"
        android:text="@string/tv_event_name"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_version_number_mode_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:layout_gravity="center"
        android:text="@string/tv_version_num"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/very_very_small"
        android:layout_marginTop="@dimen/very_small"
        android:layout_marginBottom="@dimen/small"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:background="@color/black" />

    <Button
        android:id="@+id/btn_objective_collection_select"
        style="@style/btn_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn_objective_collection_select" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/very_very_small"
        android:layout_margin="@dimen/small"
        android:background="@color/black" />

    <Button
        android:id="@+id/btn_subjective_collection_select"
        style="@style/btn_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn_subjective_collection_select" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/very_very_small"
        android:layout_margin="@dimen/small"
        android:background="@color/black" />

        <Button
            android:id="@+id/btn_playoff_select"
            style="@style/btn_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_playoffs" />
</LinearLayout>